# agent-poc-starter

./: .env  .env.example  MAKEFILE_APPEND.crewai  Makefile  README-crew-mcp-stock.md  README.crewai_mcp.md  README.crewai_mcp_hotfix1.md  README.md  WORKSHOP_CONTEXTFORGE_POC.md  _docker-compose.yml.mcp  _docker-compose.yml.ori  docker-compose.crewai.yml  docker-compose.mcp.yml  docker-compose.stock.override.yml  docker-compose.yml
services/: a.json
services/tsg-officer/: .dockerignore  .env.example  .tsg_checkpoints.sqlite  .tsg_checkpoints.sqlite-shm  .tsg_checkpoints.sqlite-wal  Dockerfile  README.md  pyproject.toml
services/tsg-officer/.tsg_sessions/: 00e49be2-d15b-4294-87ed-87b1b0be3a00.json  0482e6d9-470c-43c6-845b-66644dd5ac21.json  0aa9a3bf-733b-421b-94c3-3d6f7da771c3.json  11777bc3-610f-47d5-8ec3-5bc1fb15f8fb.json  2b79fd83-c597-4a03-aeb7-dee8a9f02f12.json  2d57d35b-4fc0-4b5e-be88-d52d114b87b5.json  32a663af-cc19-48d3-83ab-44f0adf3a8a4.json  3368c608-994c-4ba9-a977-48a964f27a75.json  4fef164a-15ca-4ebb-b294-04b6defcc09f.json  62d77f56-e89a-4344-92f7-b6b666199149.json  67a03bb6-a945-408f-bc13-fdea5bd2f5ee.json  7070751e-2421-4085-98db-e3a12c3aa8d8.json  8b6f6be4-c797-445e-8f28-e13dbeebac95.json  8bf44cbb-6e78-4079-8514-7ddff8b186e8.json  934f9b66-6c78-4234-b1ca-e8d627465997.json  99f69178-1fd5-4b68-8382-2efa53f158c7.json  b2263ed8-5957-46b6-b472-1aa8a6ad80fd.json  d14e7e2b-e7b7-473f-ba6e-6604c1a46488.json  ef9e4e73-f309-4212-bacd-9854be3bcb40.json
services/tsg-officer/app/: streamlit_app.css  streamlit_app.py
services/tsg-officer/scripts/: export_schemas.py
(+74 files in other folders)
